manifests/seraphim/prod/immich/Deployment-valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valkey
    app.kubernetes.io/version: 9.0.2
    helm.sh/chart: valkey-0.9.4
  name: valkey
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: valkey
      app.kubernetes.io/name: valkey
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/initconfig: e919fad633e99956f07100275e791359
      labels:
        app.kubernetes.io/instance: valkey
        app.kubernetes.io/name: valkey
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - /data/conf/valkey.conf
          command:
            - valkey-server
          image: docker.io/valkey/valkey:9.0.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping
          name: valkey
          ports:
            - containerPort: 6379
              name: tcp
              protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping
          volumeMounts:
            - mountPath: /data
              name: valkey-data
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: valkey
      volumes:
        - configMap:
            defaultMode: 365
            name: valkey-init-scripts
          name: scripts
        - emptyDir: {}
          name: valkey-data
