manifests/seraphim/prod/immich/Service-valkey.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valkey
    app.kubernetes.io/version: 9.0.2
    helm.sh/chart: valkey-0.9.4
  name: valkey
  namespace: immich
spec:
  ports:
    - name: tcp
      port: 6379
      protocol: TCP
      targetPort: tcp
  selector:
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  type: ClusterIP
